# chat-musseai

./: .gitignore  Makefile  README.md  ToolUISample.tsx  demo.ipynb  demo_1.ipynb  docker-compose.yaml  graph.ipynb  prompts.md  pyproject.toml
frontend/: .env.development  .env.production  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/chat/: page.tsx
frontend/app/components/: AllowanceERC20.tsx  AuthGuard.tsx  AvailableTokens.tsx  BuySellSignal.tsx  CallEthMethod.tsx  ChatLangChain.tsx  ContractEvents.tsx  CreateAccessList.tsx  EstimateGas.tsx  EthBlockReceipts.tsx  EthFeeHistory.tsx  EthGetCode.tsx  EthGetLogs.tsx  EthGetProof.tsx  EthGetStorageAt.tsx  EthGetTransactionCount.tsx  EthMaxPriorityFeePerGas.tsx  EthTransactionReceipt.tsx  GenerateApproveERC20.tsx  GenerateImage.tsx  GetBalanceOfAddress.tsx  GetCommunityTrendingToken.tsx  GetEthBalance.tsx  GetEthBlock.tsx  GetEthBlockNumber.tsx  GetEthTransaction.tsx  GetLatestContent.tsx  GetSOLBalanceOfAddress.tsx  GetSPLBalanceOfAddress.tsx  GetTokenMetadata.tsx  LangSmithLinkToolUI.tsx  LatestQuote.tsx  NetPeerCount.tsx  NetVersion.tsx  NetworkInfo.tsx  ProgressToolUI.tsx  SelectModel.tsx  SendEVMTransation.tsx  SendSolanaTransation.tsx  SourceList.tsx  (+7 more)
frontend/app/components/chat-interface/: chat-composer.tsx  index.tsx  messages.tsx
frontend/app/components/thread-history/: index.tsx  thread-item.tsx  utils.ts
frontend/app/components/ui/: background-decoration.tsx  button.tsx  carousel.tsx  feature-card.tsx  loading-spinner.tsx  stats-card.tsx
frontend/app/components/ui/assistant-ui/: attachment.tsx  tooltip-icon-button.tsx
frontend/app/contexts/: GraphContext.tsx  UserContext.tsx  appkit.tsx  utils.ts
frontend/app/hooks/: useRuns.tsx  useThreads.tsx  useUser.tsx
frontend/app/login/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/register/: page.tsx
frontend/app/utils/: convert_messages.ts
musseai-agent/: .env.monitor.example  Dockerfile  Dockerfile.musseai_agent  Dockerfile.telegram_bot  Dockerfile.trading_signal  Makefile  README.md  docker-compose-test.yaml  docker-compose.yaml  graph.ipynb  langgraph.json  pyproject.toml  wallet_agent.md
musseai-agent/src/: agent_config.py  enhanced_router_tools.py  loggers.py  openai_assistant_tools.py  start_monitor.py  telegram_bot.py  telegram_service.py  trading_signal.py  trading_signal_bak.py  webapp.py
musseai-agent/src/alerts_monitor/: alert_conditions.py  alert_monitoring_execution.py  monitor_cli.py  monitor_status_manager.py  monitoring_service_api.py  notification_sender.py  portfolio_db.py  types.py
musseai-agent/src/alerts_monitor/utils/: cmc.py
musseai-agent/src/config/: api_config.py
musseai-agent/src/graphs/: graph_chatbot.py  graph_chatbot.py.bak  graph_chatbot.py.bak_0  graph_crypto_portfolios.py  graph_image.py  graph_infura.py  graph_network.py  graph_portfolio_analysis.py  graph_quote.py  graph_search.py  graph_solana.py  graph_solana_meme.py  graph_swap.py  graph_swap_v2.py  graph_trading_signal.py  graph_trading_signal_backtest.py  graph_trading_signal_v2.py  graph_trading_strategy.py  graph_wallet.py
musseai-agent/src/graphs/trading_signal_graph/: trading_backtest.py  trading_signal.py
musseai-agent/src/mysql/: auth.sql  crypto_portfolio.sql  crypto_positions.sql  crypto_positions_migration.sql  crypto_positions_schema.sql  dao.py  db.py  insert_assets.sql  insert_assets_cp.sql  model.py
musseai-agent/src/prompts/: prompt_chatbot.py  prompt_generate_signal.py  prompt_quote.py  prompt_signal_backtest.py  prompt_solana_meme.py  prompt_swap_v2.py  prompt_trading_strategy.py
musseai-agent/src/tools/: tools_agent_router.py  tools_crypto_portfolios.py  tools_crypto_portfolios_analysis.py  tools_image.py  tools_infura.py  tools_portfolio_analysis.py  tools_portfolio_overview.py  tools_quote.py  tools_search.py  tools_solana.py  tools_solana_meme.py  tools_strategy_generator.py  tools_swap.py  tools_swap_v2.py  tools_trading_signal.py  tools_trading_signal_backtest.py  tools_trading_strategy.py  tools_wallet.py
musseai-agent/src/tools/portfolio_analysis/: alerts_monitoring.py  market_analysis.py  performance_analysis.py  portfolio_overview.py  recommendations.py  reporting.py  risk_analysis.py
musseai-agent/src/tools/portfolios/: tools_price_management.py
musseai-agent/src/utils/: api_decorators.py  api_manager.py  batch_cache_api_manager.py  cache_refresh_scheduler.py  enhance_multi_api_manager.py  optimized_batch_cache_api_manager.py  redis_cache.py  smart_cache_invalidator.py
musseai-agent/src/utils/api/: cryptocompare.py
swap_bot/: Dockerfile.swap_bot  README.md  pyproject.toml
swap_bot/src/: swap_bot_loggers.py  swap_tg_bot_service.py
telegram_bot/: Dockerfile.telegram_bot  pyproject.toml
trading_signal/: Dockerfile.trading_signal  README.md  pyproject.toml  user_guide.md
trading_signal/src/: loggers.py  telegram_bot_service.py  telegram_service.py  trading_signal.py
