[project]
name = "graphs"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-openai>=0.1.22",
    "langchain-anthropic (==0.3.0)",
    "langchain-fireworks>=0.1.7",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.17",
    "tavily-python>=0.4.0",
    "boto3 (>=1.37.25,<2.0.0)",
    "vertexai (>=1.71.1,<2.0.0)",
    "anthropic (==0.40.0)",
    "langchain-ollama (>=0.3.0,<0.4.0)",
    "spider-client (>=0.1.32,<0.2.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.31.0,<5.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "tradingview-ta (>=3.3.0,<4.0.0)",
    "web3 (>=7.10.0,<8.0.0)",
    "solana (>=0.36.6,<0.37.0)",
    "tronpy (>=0.5.0,<0.6.0)",
    "langgraph-cli[inmem] (>=0.2.5,<0.3.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langgraph (>=0.3.31,<0.4.0)",
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["graphs","prompts","tools"]
[tool.setuptools.package-dir]
"graphs" = "src/graphs"
"prompts" = "src/prompts"
"tools" = "src/tools"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
]
