[tool.poetry]
name = "graphs"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = ["William Fu-Hinthorn <13333726+hinthornw@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain-openai = ">=0.1.22"
langchain-anthropic = "==0.3.0"
langchain-fireworks = ">=0.1.7"
python-dotenv = ">=1.0.1"
langchain-community = ">=0.2.17"
tavily-python = ">=0.4.0"
boto3 = ">=1.37.25,<2.0.0"
vertexai = ">=1.71.1,<2.0.0"
anthropic = "==0.40.0"
langchain-ollama = ">=0.3.0,<0.4.0"
spider-client = ">=0.1.32,<0.2.0"
fastapi = ">=0.115.12,<0.116.0"
bs4 = ">=0.0.2,<0.0.3"
selenium = ">=4.31.0,<5.0.0"
pytz = ">=2025.2,<2026.0"
tradingview-ta = ">=3.3.0,<4.0.0"
web3 = ">=7.10.0,<8.0.0"
solana = ">=0.36.6,<0.37.0"
tronpy = ">=0.5.0,<0.6.0"
langchain = ">=0.3.23,<0.4.0"
python-jose = {extras = ["cryptography"], version = ">=3.4.0,<4.0.0"}
python-multipart = ">=0.0.20,<0.0.21"
email-validator = ">=2.2.0,<3.0.0"
pycryptodome = ">=3.22.0,<4.0.0"
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
bcrypt = "==4.0.1"
solders = ">=0.26.0,<0.27.0"
sqlalchemy = "^2.0.41"
pymysql = "^1.1.1"
alembic = "^1.16.2"
langgraph = "^0.4.8"
langgraph-api = "^0.2.61"
pandas = "^2.3.1"
scipy = "^1.16.0"
redis = "^6.2.0"
schedule = "^1.2.2"
twilio = "^9.7.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["graphs","prompts","tools","mysql","utils","alerts_monitor"]

[tool.setuptools.package-dir]
"graphs" = "src/graphs"
"prompts" = "src/prompts"
"tools" = "src/tools"
"mysql" = "src/mysql"
"utils" = "src/utils"
"alerts_monitor" = "src/alerts_monitor"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
